SERVER-29985 Remove unused variable in write_conflict_exception.h